test/fails/functionUndefined.imp
fun  main()
vars tmp
{       
        tmp = derp();
        return tmp;
}
